// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableSplitscreen renders a text-based element 1`] = `
<div
  className="sc-bdVaJa cQtrjW"
>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "blue",
          "padding": "6rem",
        }
      }
    >
      <h2>
        Left side
      </h2>
    </div>
  </div>
  <div
    className="sc-bwzfXH gbnVeh"
  >
    <div
      style={
        Object {
          "backgroundColor": "red",
          "padding": "6rem",
          "textAlign": "right",
        }
      }
    >
      <h2>
        Right side
      </h2>
    </div>
  </div>
  <div
    className="react-draggable sc-htpNat bhkyHK"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "touchAction": "none",
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;

exports[`DraggableSplitscreen renders a video-based element 1`] = `
<div
  className="sc-bdVaJa cQtrjW"
>
  <div>
    <video
      autoPlay={true}
      loop={true}
      muted={true}
      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
      style={
        Object {
          "height": "auto",
          "objectFit": "inherit",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH gbnVeh"
  >
    <video
      autoPlay={true}
      loop={true}
      muted={true}
      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4"
      style={
        Object {
          "height": "auto",
          "objectFit": "inherit",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="react-draggable sc-htpNat bhkyHK"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "touchAction": "none",
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;

exports[`DraggableSplitscreen renders an image-based element. 1`] = `
<div
  className="sc-bdVaJa cQtrjW"
>
  <div>
    <img
      alt="Left Side"
      src="/react-draggable-splitscreen/example/assets/left-side.png"
      style={
        Object {
          "height": "auto",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="sc-bwzfXH gbnVeh"
  >
    <img
      alt="Right Side"
      src="/react-draggable-splitscreen/example/assets/right-side.png"
      style={
        Object {
          "height": "auto",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="react-draggable sc-htpNat bhkyHK"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "touchAction": "none",
        "transform": "translate(0px,0px)",
      }
    }
    transform={null}
  />
</div>
`;
